<resources>
    <string name="app_name">Shubh Paridhan</string>
    <string name="forgot_password"><u>Forgot Password</u></string>
    <string name="signup"><u>Sign Up</u></string>
    <string name="signin"><u>Sign In</u></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product">Product List</string>
    <string name="mobile_number">Enter your Mobile Number</string>
    <string name="please_wait">Please Wait</string>
    <string name="aresurelogout">Are you sure you want to log out?</string>
    <string name="newVersion">Update to the latest Version</string>
    <string name="update">Update</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="signIn">Sign In</string>
    <string name="no_internet_connection">You are offline. \nPlease check your Internet connection.</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="orderprice">Order Price</string>
    <string name="orderedid">OrderId@</string>
    <string name="empty_cart">Empty Cart</string>
    <string name="empty_cart_heading">Empty Cart</string>
    <string name="carlist">My Cart</string>
    <string name="shipping">Shipping</string>
    <string name="orderlist">Order List</string>
    <string name="viewdetails">View Details</string>
    <string name="status">Status</string>
    <string name="date">Date</string>
    <string name="shippingAddres">Shipping Address</string>
    <string name="addNewaddress">ADD NEW ADDRESS</string>
    <string name="editAddress">Edit Address</string>
    <string name="PhoneNumber">PHONE NUMBER</string>
    <string name="edit">EDIT</string>
    <string name="odersummary">Order Summary</string>
    <string name="senderinformation">SENDER INFORMATION</string>
    <string name="proceed">PROCEED</string>
    <string name="addnewaddress">Add New Address</string>
    <string name="customername">CUSTOMER NAME</string>
    <string name="required">This field is required</string>
    <string name="flathousenumber">FLAT/HOUSE NO./BUILDING<font color='#FF0000'>*</font></string>
    <string name="streetcollony">STREET/COLONY<font color='#FF0000'>*</font></string>
    <string name="landmark">LANDMARK<font color='#FF0000'>*</font></string>
    <string name="saveaddress">Save Address</string>
    <string name="Change">Change</string>
    <string name="phonenumber">PHONE NUMBER<font color='#FF0000'>*</font></string>
    <string name="pincode">PINCODE<font color='#FF0000'>*</font></string>
    <string name="city">CITY<font color='#FF0000'>*</font></string>
    <string name="state">STATE<font color='#FF0000'>*</font></string>
    <string name="category">Sub Category List</string>
    <string name="pleasewait">Please Wait</string>
    <string name="loadingimage">Loading Image</string>
    <string name="sharingimage">Sharing Image</string>
    <string name="selectquantity">Select Quantity</string>
    <string name="remove">Remove product from cart?</string>
    <string name="cancele">CANCEL</string>
    <string name="removee">REMOVE</string>
</resources>