<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
>
        <RelativeLayout
        android:id="@+id/rlHeader"
        android:background="@color/purple_500"
        android:layout_width="match_parent"
        android:layout_height="55dp">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_marginLeft="5dp"
            android:layout_centerVertical="true"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/ic_baseline_arrow_back_24"/>

        <TextView
            android:id="@+id/tvAddressss"
            android:layout_toRightOf="@+id/ivBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="18dp"
            android:text="@string/shippingAddres"/>

    </RelativeLayout>
  <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       android:layout_below="@+id/rlHeader">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_text_input"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtCutomerName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/customername"
                    android:textSize="14dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvName"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="20dp"
                android:text="@string/required"
                android:textColor="@color/red"
                android:textSize="10dp"
                android:visibility="gone" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtPhoneNymber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phonenumber"
                    android:inputType="number"
                    android:maxLength="10"
                    android:textSize="14dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvnumber"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="20dp"
                android:text="@string/required"
                android:textColor="@color/red"
                android:textSize="10dp"
                android:visibility="gone" />


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_busniess"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/flathousenumber"
                    android:textSize="14dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvflat"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="20dp"
                android:text="@string/required"
                android:textColor="@color/red"
                android:textSize="10dp"
                android:visibility="gone" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtStreet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/streetcollony"
                    android:inputType="text"
                    android:textSize="14dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvstreet"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="20dp"
                android:text="@string/required"
                android:textColor="@color/red"
                android:textSize="10dp"
                android:visibility="gone" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtLandmark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/landmark"
                    android:textSize="14dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvlandmark"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="20dp"
                android:text="@string/required"
                android:textColor="@color/red"
                android:textSize="10dp"
                android:visibility="gone" />


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_pincode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pincode"
                    android:inputType="number"
                    android:maxLength="6"
                    android:textSize="14dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvpincode"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="20dp"
                android:text="@string/required"
                android:textColor="@color/red"
                android:textSize="10dp"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/background">

                <Spinner
                    android:id="@+id/sp_state"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"></Spinner>
            </LinearLayout>

            <TextView
                android:id="@+id/tvstate"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="20dp"
                android:text="@string/required"
                android:textColor="@color/red"
                android:textSize="10dp"
                android:visibility="gone" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/background">

                <Spinner
                    android:id="@+id/sp_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"></Spinner>
            </LinearLayout>

            <TextView
                android:id="@+id/tvcity"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="20dp"
                android:text="@string/required"
                android:textColor="@color/red"
                android:textSize="10dp"
                android:visibility="gone" />

            <View
                android:layout_width="match_parent"
                android:layout_height="35dp" />
        </LinearLayout>
    </ScrollView>
  <LinearLayout
        android:id="@+id/llAddSave"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/purple_500"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/saveaddress"
            android:textColor="@color/white"
            android:textSize="15dp" />
    </LinearLayout>


</RelativeLayout>
