<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_margin="2dp"
    android:padding="5dp"
    android:background="@drawable/background"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/orderlist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:elevation="3dp">

        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/rlorder"

            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="100dp"
                android:layout_height="wrap_content">
                <TextView                     android:layout_marginTop="3dp"

                    android:padding="3dp"
                    android:visibility="invisible"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/orderedid"
                    android:textColor="@color/dark_grey"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/oderid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/orderedid"
                    android:textColor="@color/dark_grey"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvprice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/orderprice"
                    android:textColor="@color/dark_grey"
                    android:textSize="14dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/date"
                    android:textColor="@color/dark_grey"
                    android:textSize="14dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvstatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/status"
                    android:textColor="@color/dark_grey"
                    android:textSize="14dp"
                    android:textStyle="bold" />
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_marginTop="3dp"
                    android:visibility="invisible"
                    android:id="@+id/cancel_tv"
                    android:background="@drawable/background"
                    android:layout_marginRight="5dp"
                    android:textAlignment="textEnd"
                    android:padding="3dp"
                    android:layout_gravity="end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Cancel"
                    android:textColor="#EE417C"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/orderiddetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="8878"
                    android:textColor="@color/dark_grey"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvpricedetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:text="Order Id"
                    android:textColor="@color/dark_grey"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/tvdatedetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:text="Date"
                    android:textColor="@color/dark_grey"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/tvstatusdetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:text="status"
                    android:textColor="@color/dark_grey"
                    android:textSize="14dp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/tvstatusdetaill"
                    android:padding="5dp"
                    android:layout_marginRight="5dp"
                    android:textAlignment="textEnd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/viewdetails"
                    android:textColor="#EE417C"
                    android:textSize="14dp"
                    android:textStyle="bold" />

            </LinearLayout>







        </LinearLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>