<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <RelativeLayout
        android:id="@+id/rlHeader"
        android:background="@color/purple_500"
        android:layout_width="match_parent"
        android:layout_height="55dp">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_marginLeft="5dp"
            android:layout_centerVertical="true"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/ic_baseline_arrow_back_24"/>

        <TextView
            android:layout_toRightOf="@+id/ivBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="18dp"
            android:text="@string/shippingAddres"/>

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/layout"
        android:layout_below="@+id/rlHeader"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listingaddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp">

        </androidx.recyclerview.widget.RecyclerView>


    </LinearLayout>


    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:orientation="horizontal"
        android:overScrollMode="ifContentScrolls">

        <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:stretchColumns="2">


            <TableRow>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_weight="2"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/llShare"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_weight="1"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/addnewaddress"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/addNewaddress"
                            android:textColor="@color/purple_500"
                            android:textSize="16dp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <View
                        android:id="@+id/view"
                        android:layout_width="0.5dp"
                        android:layout_height="match_parent"
                        android:layout_centerHorizontal="true"
                        android:background="@color/grey" />

                    <LinearLayout
                        android:id="@+id/proces"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@color/purple_500"
                        android:gravity="center">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/proceed"
                            android:textStyle="bold"
                            android:textColor="@color/white"
                            android:textSize="16dp" />

                    </LinearLayout>

                </LinearLayout>

            </TableRow>
        </TableLayout>
    </LinearLayout>


</RelativeLayout>
